--- a/index.html
+++ b/index.html
@@ -96,6 +96,8 @@
         </div>
 
         <div id="offersDiv">
+            <h2 style="margin: 0;font-size: 1rem;margin-top: 5px;">Tutoring Sessions</h2>
+            <hr>
             <button id="class35" class="color1" onclick="handleOffer(this)">$35</button>
             <button id="class65" class="color2" onclick="handleOffer(this)">$65</button>
             <button id="class300" class="color3" onclick="handleOffer(this)">$300</button>
@@ -210,7 +212,7 @@
                 </tbody>
             </table>
             <hr>
-            <table>
+            <!-- <table>
                 <tbody>
                     <tr>
                         <th>
@@ -273,8 +275,7 @@
                         </td>
                     </tr>
                 </tbody>
-            </table>
-            <hr>
+            </table> -->
             <div id="scheduleBtnDiv">
                 <button id="scheduleBtn" onclick="handleModal('myModal2')" class="color2"
                     style="transform: scale(1);">Click To Schedule</button>
