Change text from tutoring to consultation

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         </div>
 
         <div id="offersDiv">
-            <h2>Tutoring Sessions</h2>
+            <h2>Consultation Sessions</h2>
             <hr>
             <button id="class35" class="color1" onclick="handleOffer(this)">$35</button>
             <button id="class65" class="color2" onclick="handleOffer(this)">$65</button>
