Re-ordered the hours

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         </div>
 
         <div id="offersDiv">
-            <h2>Consultation Sessions</h2>
+            <h2>Consultations</h2>
             <hr>
             <button id="class35" class="color1" onclick="handleOffer(this)">$35</button>
             <button id="class65" class="color2" onclick="handleOffer(this)">$65</button>
@@ -108,44 +108,47 @@
                 <tbody>
                     <tr>
                         <th>
-                            30 mins
+                            20 hours
                         </th>
                         <td>
-                            <input type="radio" disabled class="class35" name="30mins">
+                            <input type="radio" disabled name="20hours">
                         </td>
                         <td>
-                            <input type="radio" disabled name="30mins">
+                            <input type="radio" disabled name="20hours">
+                        </td>
+
+                        <td>
+                            <input type="radio" disabled name="20hours">
                         </td>
                         <td>
-                            <input type="radio" disabled name="30mins">
+                            <input type="radio" disabled name="20hours">
                         </td>
                         <td>
-                            <input type="radio" disabled name="30mins">
-                        </td>
-                        <td>
-                            <input type="radio" disabled name="30mins">
+                            <input type="radio" disabled class="class1000" name="20hours">
                         </td>
                     </tr>
                     <tr>
                         <th>
-                            1 hour
+                            10 hours
                         </th>
                         <td>
-                            <input type="radio" disabled name="60mins">
+                            <input type="radio" disabled name="10hours">
                         </td>
                         <td>
-                            <input type="radio" disabled class="class65" name="60mins">
+                            <input type="radio" disabled name="10hours">
+                        </td>
+
+                        <td>
+                            <input type="radio" disabled name="10hours">
                         </td>
                         <td>
-                            <input type="radio" disabled name="60mins">
+                            <input type="radio" disabled class="class550" name="10hours">
                         </td>
                         <td>
-                            <input type="radio" disabled name="60mins">
-                        </td>
-                        <td>
-                            <input type="radio" disabled name="60mins">
+                            <input type="radio" disabled name="10hours">
                         </td>
                     </tr>
+                    
                     <tr>
                         <th>
                             5 hours
@@ -169,46 +172,45 @@
                     </tr>
                     <tr>
                         <th>
-                            10 hours
+                            1 hour
                         </th>
                         <td>
-                            <input type="radio" disabled name="10hours">
+                            <input type="radio" disabled name="60mins">
                         </td>
                         <td>
-                            <input type="radio" disabled name="10hours">
-                        </td>
-
-                        <td>
-                            <input type="radio" disabled name="10hours">
+                            <input type="radio" disabled class="class65" name="60mins">
                         </td>
                         <td>
-                            <input type="radio" disabled class="class550" name="10hours">
+                            <input type="radio" disabled name="60mins">
                         </td>
                         <td>
-                            <input type="radio" disabled name="10hours">
+                            <input type="radio" disabled name="60mins">
+                        </td>
+                        <td>
+                            <input type="radio" disabled name="60mins">
                         </td>
                     </tr>
                     <tr>
                         <th>
-                            20 hours
+                            30 mins
                         </th>
                         <td>
-                            <input type="radio" disabled name="20hours">
+                            <input type="radio" disabled class="class35" name="30mins">
                         </td>
                         <td>
-                            <input type="radio" disabled name="20hours">
-                        </td>
-
-                        <td>
-                            <input type="radio" disabled name="20hours">
+                            <input type="radio" disabled name="30mins">
                         </td>
                         <td>
-                            <input type="radio" disabled name="20hours">
+                            <input type="radio" disabled name="30mins">
                         </td>
                         <td>
-                            <input type="radio" disabled class="class1000" name="20hours">
+                            <input type="radio" disabled name="30mins">
+                        </td>
+                        <td>
+                            <input type="radio" disabled name="30mins">
                         </td>
                     </tr>
+                    
                 </tbody>
             </table>
             <hr>
